[package]
name = "coreMQ"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
anyhow = "1.0.101"

dashmap = "5"

redb = "2"
bincode = "1"

jsonwebtoken = "9"
casbin = "2.20.0"

argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"